--- a/firstPage.html
+++ b/firstPage.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="taskManager/index.html">
+    <form action="index.html">
         <h1>Please login for the Task Managment Application</h1>
         <div class="form">
             <div class="headingsContainer">
@@ -32,7 +32,7 @@
                 <!-- submit button -->
                 <button type="submit">Login</button>
                 <!-- signup link -->
-                <p class="register">Not a member? <a href="taskManager/signup.html" class="but">Register here</a></p>
+                <p class="register">Not a member? <a href="signup.html" class="but">Register here</a></p>
             </div>
         </div>
     </form>
